[package]
name = "bump_future"
version = "0.1.0"
edition = "2021"
license = "Apache License 2.0"
description = "Type Erased Future Stored In Bump"
homepage = "https://github.com/yan4rust/bump_future"
repository="https://github.com/yan4rust/bump_future"
readme = "README.md"
exclude = ["/.github/*", "/benches", "/tests", "/.vscode", "/examples","Cargo.lock"]
authors = ["yan4rust <yan4rust@gmail.com>"]

[dependencies]
bumpalo = "3.16.0"
crossbeam-queue = "0.3.11"
once_cell = "1.20.2"
sptr = "0.3.2"
tokio = { version = "1.40.0", features = ["rt", "sync"] }

[dev-dependencies]
anyhow = "1.0.91"
bytes = "1.8.0"
clap = { version = "4.5.20", features = ["derive"] }
http = "1.1.0"
hyper = { version = "1.5.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.9", features = ["tokio"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
http-body = "1.0.1"
http-body-util = "0.1.2"
